# doe-wizard

./: .gitignore  README.md  app.py  constants.py  pyproject.toml  pytest.ini  requirements.txt  state.py
archive/: app.py  constants.py  state.py
docs/: 2025_project2_screen_orchestration_map_v1_20250829.txt  2025_project2_system_design_v1_20250829.md  contracts_index.md  decision_log_template_v1_20250829.md  env_setup_readme_v1_20250829.md  mvp_blockers_diagnosis_and_plan_v1_20250829.md  requirements_mvp_v1_20250829.txt  screen_agnostic_module_map_v1_20250829.txt  smoke_s2_join_profile_stub_v1_20250829.ps1  smoke_s3_collapse_stub_v1_20250829.ps1  smoke_s4_modeling_stub_v1_20250829.ps1  smoke_s5_optimization_stub_v1_20250829.ps1  state_and_artifacts.md  test_plan_v1_20250829.md  ui_ux_baseline_v1_20250829.md
schemas/: schemas_champion_bundle_v1_20250829.json  schemas_datacard_v1_20250829.json  schemas_modeling_settings_v1_20250829.json  schemas_optimization_settings_v1_20250829.json  schemas_optimization_trace_v1_20250829.json  schemas_profile_v1_20250829.json  schemas_session_setup_v1_20250829.json
screens/: files_join_profile.py  handoff.py  modeling.py  optimization.py  roles_collapse.py  session_setup.py
services/: artifacts.py  artifacts_core.py  collapse_engine.py  file_io.py  handoff_core.py  handoff_packaging.py  joiner.py  modeling_select.py  modeling_train.py  opt_candidate_pool.py  opt_constraints.py  opt_core.py  opt_defaults.py  opt_distance.py  opt_guardrails.py  opt_registry.py  opt_scoring.py  opt_validation.py  profiler.py  roles.py  s1_adapter.py  (+6 more)
(+98 files in other folders)
